tidy up use of generics in LocaitonID